Implement DidScroll() for PDFWebContentsHelper.

TouchSelectionControllerClient::DidScroll() is how subframes are
given the chance after a mainframe scroll to update selection
coordinates for TouchSelection editing handles/quickmenu.

This CL implements this for PDFWebContentsHelper so that
handles/quickmenu display correctly after an embedded PDF's
mainframe is scrolled.

Bug: 776839
Change-Id: Ifb9c6ca28e1f17653cb7cba1619575ea44faec6e
Reviewed-on: https://chromium-review.googlesource.com/730412
Reviewed-by: dsinclair <dsinclair@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510817}
Former-commit-id: fa487d2858558b5b9e7c910ae309341279240a57